# maison

./: .env.example  .gitignore  .gitmodules  AGENTBRIEF.md  Makefile  README.md  deploy.sh  docker-compose.hybrid.ssl.yml  docker-compose.hybrid.yml  docker-compose.ssl.yml  docker-compose.yml  package.json  users.json.template
backend/: Cargo.toml  MITSUBISHI_IR.md
backend/docs/: broadlink.md
backend/src/: auth.rs  broadlink.rs  config.rs  error.rs  hue.rs  hue_stub.rs  lib.rs  main.rs  meross.rs  mitsubishi_ir.rs  nabaztag.rs  tempo.rs  tuya.rs  zigbee.rs  zigbee_native.rs
backend/src/routes/: auth.rs  broadlink.rs  devices.rs  hue.rs  meross.rs  mod.rs  nabaztag.rs  root.rs  tempo.rs  zigbee.rs
backend/tests/: auth_regression.rs  broadlink_manager.rs  meross_regression.rs  tempo_regression.rs  tuya_regression.rs
backend/tests/fixtures/tempo/: README.md
backend/tests/fixtures/tuya/: README.md  feeder-status.json  fountain-status.json  litter-box-status.json
bootstrap/: unattended.sh
cache/: mitsubishi-capture-progress-msz-hj5va.txt
cache/tempo/: calibration_params.json  temp_forecast.json  temperature_history.json  tempo_history_2015-2016.json  tempo_history_2016-2017.json  tempo_history_2017-2018.json  tempo_history_2018-2019.json  tempo_history_2019-2020.json  tempo_history_2020-2021.json  tempo_history_2021-2022.json  tempo_history_2022-2023.json  tempo_history_2023-2024.json  tempo_history_2024-2025.json  tempo_history_2025-2026.json  tempo_history_2026-2027.json
deploy/mosquitto/: cat-monitor.conf
deploy/openrc/: cat-monitor  cloudflared-cat-monitor
deploy/systemd/: cat-monitor.service  cloudflared-cat-monitor.service
docs/: alpine-headless-flash-macos.md  nabaztag-setup.md  raspberry-pi-1.md  tempo-calibration.md  zigbee2mqtt-host-setup.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: LanguageSwitcher.tsx  Layout.tsx
frontend/src/components/dashboard/: DashboardSectionHeader.tsx
frontend/src/components/devices/: BroadlinkClimateControl.tsx  FeederControl.tsx  FountainControl.tsx  HueLampControl.tsx  LitterBoxControl.tsx  MealPlanManager.tsx  MerossPlugControl.tsx  NabaztagControl.tsx  TempoCalendar.tsx  TempoCard.tsx  ZigbeeLampControl.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  label.tsx  select.tsx  skeleton.tsx  slider.tsx  switch.tsx  textarea.tsx  toast.tsx  toaster.tsx  tooltip.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/i18n/locales/: en.json  fr.json
frontend/src/lib/: api.ts  pwa.ts
frontend/src/pages/: DashboardPage.tsx  DevicePage.tsx  HueLampPage.tsx  LoginPage.tsx  MerossPlugPage.tsx  NabaztagPage.tsx  TempoPredictionPage.tsx  ZigbeeLampPage.tsx
mosquitto/: mosquitto.conf
scripts/: build-cloudflared-armv6.sh  build-rpi1-backend.sh  capture-mitsubishi-ir.sh  flash-alpine-headless-macos.sh  generate-mqtt-certs.sh  start-tempo.sh
src/: index.ts
src/routes/: auth.ts  devices.ts  feeder.ts  fountain.ts  hue-lamps.ts  litter-box.ts  meross.ts  tempo.ts
src/schemas/: index.ts
src/utils/: DeviceManager.ts  Feeder.ts  HueLamp.ts  HueLampManager.ts  HueLampManagerInterface.ts  HueLampManagerStub.ts  MealPlan.ts  MerossDevice.ts  MerossManager.ts  formatters.ts
tempo-prediction/: ARCHITECTURE.md  Makefile  README.md  pyproject.toml
tempo-prediction/docs/: RTE_ALGORITHM.md
tempo-prediction/models/: mlx_tempo.safetensors  mlx_tempo_params.json
tempo-prediction/tempo_prediction/: __init__.py  algorithm.py  backtest.py  constants.py  data_collector.py  hybrid_predictor.py  lstm_predictor.py  mlx_predictor.py  predictor.py  server.py  train.py
zigbee2mqtt/: configuration.yaml  zigbee2mqtt.service
