[package]
name = "cat-monitor-rust-backend"
version = "0.1.0"
edition = "2021"
default-run = "cat-monitor-rust-backend"

[features]
live-runtime-tests = []

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
axum-extra = { version = "0.10.3", features = ["cookie"] }
base64 = "0.22.1"
btleplug = "0.12.0"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
chrono-tz = "0.10.4"
dotenvy = "0.15.7"
futures = "0.3.32"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
md5 = "0.8.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query", "rustls"] }
rbroadlink = "0.4.2"
rust-async-tuyapi = { git = "https://github.com/uplg/rust-async-tuyapi", branch = "main" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.22.0", features = ["v4"] }

[dev-dependencies]
bytes = "1.10.1"
tower = "0.5.3"
uuid = { version = "1.22.0", features = ["v4"] }
