[package]
name = "cat-monitor-rust-backend"
version = "0.1.0"
edition = "2021"
default-run = "cat-monitor-rust-backend"

[features]
default = ["bluetooth"]
bluetooth = ["dep:btleplug"]
live-runtime-tests = []

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.8"
axum-extra = { version = "0.10.3", features = ["cookie"] }
base64 = "0.22.1"
btleplug = { version = "0.12.0", optional = true }
chrono = { version = "0.4.44", features = ["clock", "serde"] }
chrono-tz = "0.10.4"
dotenvy = "0.15.7"
ashv2 = { git = "https://github.com/uplg/ashv2", branch = "main", version = "6.0.0" }
ezsp = { git = "https://github.com/uplg/ezsp", branch = "main", version = "3.0.0", features = ["ashv2"] }
silizium = { version = "2", git = "https://github.com/PaulmannLighting/silizium/", features = ["le-stream"] }
futures = "0.3.32"
heapless = "0.9"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
md5 = "0.8.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query", "rustls"] }
rbroadlink = "0.4.2"
rumqttc = "0.24.0"
rust-async-tuyapi = { git = "https://github.com/uplg/rust-async-tuyapi", branch = "main" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time"] }
tokio-serial = "5.4.5"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.22.0", features = ["v4"] }

[dev-dependencies]
bytes = "1.10.1"
tempfile = "3.23.0"
tower = "0.5.3"
uuid = { version = "1.22.0", features = ["v4"] }
