[project]
name = "tempo-prediction"
version = "1.0.0"
description = "AI-powered Tempo electricity pricing prediction for French EDF tariffs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Cat Monitor Team"}
]

dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
tempo-train = "tempo_prediction.train:main"
tempo-backtest = "tempo_prediction.backtest:main"
tempo-serve = "tempo_prediction.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tempo_prediction"]
