[project]
name = "tempo-prediction"
version = "1.0.0"
description = "AI-powered Tempo electricity pricing prediction for French EDF tariffs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Cat Monitor Team"}
]

dependencies = [
    "numpy>=2.4.0",
    "polars>=1.38.0",
    "requests>=2.32.0",
    "python-dateutil>=2.9.0",
]

[project.scripts]
tempo-train = "tempo_prediction.train:main"
tempo-backtest = "tempo_prediction.backtest:main"
tempo-serve = "tempo_prediction.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tempo_prediction"]

# ── Ruff ─────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
    "PTH",   # flake8-use-pathlib
    "C4",    # flake8-comprehensions
    "PIE",   # flake8-pie
    "RET",   # flake8-return
    "T20",   # flake8-print (warn on print statements)
]
ignore = [
    "T201",   # allow print() — this is a CLI/server app
    "RET504", # allow assigning before return for clarity
    "UP007",  # allow Optional[X] syntax (not just X | None)
]

[tool.ruff.lint.isort]
known-first-party = ["tempo_prediction"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Pixi configuration ──────────────────────────────────────────────

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.11"
ruff = ">=0.9"

[tool.pixi.pypi-dependencies]
tempo-prediction = { path = ".", editable = true }

[tool.pixi.tasks]
serve = "python -m tempo_prediction.server"
calibrate = "python -m tempo_prediction.train"
calibrate-backtest = "python -m tempo_prediction.train --backtest"
backtest = "python -m tempo_prediction.backtest"
clean = "rm -rf models/*.safetensors models/*.json cache/*.json backtest_results.json"
lint = "ruff check tempo_prediction/"
"lint:fix" = "ruff check --fix tempo_prediction/"
format = "ruff format tempo_prediction/"
"format:check" = "ruff format --check tempo_prediction/"

[tool.pixi.feature.test.dependencies]
pytest = ">=7.4"
pytest-cov = ">=4.1"

[tool.pixi.feature.test.tasks]
test = "pytest tests/ -v"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
